<resources>
    <string name="app_name">CoffeeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_to_your_account">Sign in to your\nAccount</string>
    <string name="email">Email</string>
    <string name="enter_your_email_and_password_to_log_in">Enter your email and password to log in</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up And Sign In</string>
    <string name="sign_up_1">Sign Up</string>
    <string name="create_an_account_to_continue">Create an account to continue!</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_email_you_a_link_to_reset_your_password">We will email you\na link to reset your password.</string>
    <string name="example_email">example@example</string>
    <string name="send">Send</string>
    <string name="notify_send_link">We have sent an email to\nsarah.jansen@gmail.com with instructions to\nreset your password.</string>
    <string name="back_to_sign_in">Back to Sign in</string>
    <string name="find_the_best_coffee_for_you">Find the best\ncoffee for you</string>
    <string name="find_your_coffee">Find your coffee</string>
    <string name="coffee">Coffee</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="coffee_bean">Coffee Bean</string>
    <string name="password_required">Use 6 or more characters with a mix of uppercase and\nlowercase characters, combined with numbers.</string>
    <string name="description">Description</string>
    <string name="bean">Bean</string>
    <string name="milk">Milk</string>
    <string name="medium_roasted">Medium Roasted</string>
    <string name="cappuccino_description_content">Cappuccino is a latte made with more foam than steamed milk, often with a sprinkle of cocoa powder or cinnamon on top.</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="robusta_beans">Robusta Beans</string>
    <string name="robusta_description_content">Arabica beans are by far the most popular type of coffee beans, making up about 60% of the world’s coffee. These tasty beans originated many centuries ago in the highlands of Ethiopia, and may even be the first coffee beans ever consumed!</string>
    <string name="see_more">See More</string>
    <string name="favourites">Favourites</string>
    <string name="cart">Cart</string>
    <string name="payment">Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="please_select_the_appropriate_payment_method_for_your_order">Please select the appropriate payment method for your order.</string>
    <string name="cash">Cash</string>
    <string name="vnpay">VNPAY</string>
    <string name="momo">MoMo</string>
    <string name="zalopay">ZaloPay</string>
    <string name="shopeepay">ShopeePay</string>
    <string name="cards">Cards</string>
    <string name="pay">Pay</string>
    <string name="order_history">Order History</string>
    <string name="your_profile">Your Profile</string>
    <string name="security">Security</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="total">Total</string>
    <string name="ordered_item">Ordered Item</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="quantity">Quantity</string>
    <string name="thank_you_for_your_purchase">Thank you for your purchase!</string>
    <string name="success">Success</string>
    <string name="back_to_home">Back to Home</string>
    <string name="cart_empty_string">Fill up your lonely cart with Coffee!</string>
    <string name="favourite_empty_string">No Favourite Yet?\nDiscover more in our Home Screen!</string>
    <string name="order_history_empty_string">No Orders Yet?\nDiscover more in our Home Screen!</string>
    <string name="order_payment">Order Payment</string>
    <string name="add_your_address_details">Add your address details</string>
    <string name="deliver_to">Deliver to</string>
    <string name="ok">OK</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="destination">\tDestination</string>
    <string name="suggestions_for_you">Suggestions For You</string>
    <string name="address">Address</string>
</resources>