<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main_app.payment.PaymentFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvOrderPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/order_payment"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_back" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeMinTextSize="12sp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/deliver_to"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardTitle" />
    <Button
        android:id="@+id/btnNavigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/white"
        android:textAlignment="textStart"
        android:drawableEnd="@drawable/ic_location"
        android:text="@string/add_your_address_details"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        android:padding="12dp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="20sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/tvAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_margin="20dp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNavigate"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_button_background"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_your_phone_number"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="20sp"
            android:textColorHint="@color/light_gray"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/paymentMethodsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/payment_method"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneInputLayout" />

    <RadioGroup
        android:id="@+id/paymentMethodGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentMethodsLabel">

        <RadioButton
            android:id="@+id/cashRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black"
            android:buttonTint="@color/white"
            android:drawableStart="@drawable/custom_cash_icon"
            android:drawablePadding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:padding="16dp"
            android:text="@string/cash"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/vnPayRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black"
            android:buttonTint="@color/white"
            android:drawableStart="@drawable/custom_vnpay_icon"
            android:drawablePadding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:padding="16dp"
            android:text="@string/vnpay"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/momoRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black"
            android:buttonTint="@color/white"
            android:drawableStart="@drawable/custom_momo_icon"
            android:drawablePadding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:padding="16dp"
            android:text="@string/momo"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/zaloPayRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black"
            android:buttonTint="@color/white"
            android:drawableStart="@drawable/custom_zalopay_icon"
            android:drawablePadding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:padding="16dp"
            android:text="@string/zalopay"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/cardsRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black"
            android:buttonTint="@color/white"
            android:drawableStart="@drawable/custom_card_icon"
            android:drawablePadding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:padding="16dp"
            android:text="@string/cards"
            android:textColor="@color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/pay"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentMethodGroup"
        app:layout_constraintVertical_bias="0.25" />
</androidx.constraintlayout.widget.ConstraintLayout>